--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "yagi",
-  "version": "1.0.0",
-  "main": "main.js",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2"
-  },
-  "dependencies": {
-    "discord.js": "^13.0.1",
-    "dotenv": "^10.0.0",
-    "fs-extra": "^10.0.0"
-  }
+	"name": "yagi",
+	"version": "1.0.0",
+	"main": "main.js",
+	"license": "MIT",
+	"devDependencies": {
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"prettier": "^2.3.2"
+	},
+	"dependencies": {
+		"discord.js": "^13.0.1",
+		"dotenv": "^10.0.0"
+	}
 }
